--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ PORT=3000
 APP_ENV=local
 
 # Database
-DB_HOST=localhost
+DB_HOST=db  #set to localhost if you are running the app locally without docker
 DB_PORT=5432
 DB_DATABASE=taskcrud
 DB_USER=root
