--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,9 @@ services:
       retries: 5
 
   migrate:
-    image: migrate/migrate
+    build:
+      context: .
+      dockerfile: Dockerfile.migrate
     environment:
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
@@ -30,12 +32,10 @@ services:
         condition: service_healthy
     networks:
       - my-local-net
-    volumes:
-      - ./scripts/migrations/:/scripts/migrations/
     command:
       [
         "-path",
-        "scripts/migrations",
+        "app/migrations",
         "-database",
         "postgres://${DB_USER}:${DB_PASSWORD}@db:5432/${DB_DATABASE}?sslmode=disable",
         "-verbose",
