--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_DATABASE}
     ports:
-      - "${DB_PORT}:${DB_PORT}"
+      - "${DB_PORT}"
     volumes:
       - db_data:/var/lib/postgresql/data
     healthcheck:
@@ -60,7 +60,7 @@ services:
       PORT: ${PORT}
       DB_SCHEMA: ${DB_SCHEMA}
     ports:
-      - "${PORT}:${PORT}"
+      - "${PORT}"
     depends_on:
       db:
         condition: service_healthy
